# UFFA

./: .gitignore  README.md  pyproject.toml
UFFA/: AnalysisHandler.py  CorrelationHandler.py  FemtoMerger.py  PlotHandler.py  PurityHandler.py  SystematicHandler.py  TGraphPlotter.py  TH1Plotter.py  __init__.py
UFFA/.config/zsh/: history
UFFA/Utils/: AnalysisUtils.py  CorrelationUtils.py  HistUtils.py
